creating basics starter page

--- a/package.json
+++ b/package.json
@@ -1,37 +1,38 @@
 {
-    "name": "webpackproject",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "start": "webpack-dev-server --mode development",
-        "build": "webpack --mode production"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/DanielPopchenko/webpackProject.git"
-    },
-    "keywords": [],
-    "author": "Daniil Popchenko <daniel.popchenko@icloud.com>",
-    "license": "ISC",
-    "bugs": {
-        "url": "https://github.com/DanielPopchenko/webpackProject/issues"
-    },
-    "homepage": "https://github.com/DanielPopchenko/webpackProject#readme",
-    "devDependencies": {
-        "@babel/core": "^7.19.3",
-        "@babel/preset-env": "^7.19.3",
-        "babel-core": "^6.26.3",
-        "babel-loader": "^8.2.5",
-        "babel-preset-env": "^1.7.0",
-        "css-loader": "^6.7.1",
-        "html-webpack-plugin": "^5.5.0",
-        "mini-css-extract-plugin": "^2.6.1",
-        "sass": "^1.55.0",
-        "sass-loader": "^13.0.2",
-        "style-loader": "^3.3.1",
-        "webpack": "^5.74.0",
-        "webpack-cli": "^4.10.0",
-        "webpack-dev-server": "^4.11.1"
-    }
+  "name": "webpackproject",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "start": "webpack-dev-server --mode development",
+    "build": "webpack --mode production"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/DanielPopchenko/webpackProject.git"
+  },
+  "keywords": [],
+  "author": "Daniil Popchenko <daniel.popchenko@icloud.com>",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/DanielPopchenko/webpackProject/issues"
+  },
+  "homepage": "https://github.com/DanielPopchenko/webpackProject#readme",
+  "devDependencies": {
+    "@babel/core": "^7.19.3",
+    "@babel/preset-env": "^7.19.3",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.2.5",
+    "babel-preset-env": "^1.7.0",
+    "css-loader": "^6.7.1",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.6.1",
+    "sass": "^1.55.0",
+    "sass-loader": "^13.0.2",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.11.1"
+  }
 }
